--- a/Artzy - Web/css/style.css
+++ b/Artzy - Web/css/style.css
@@ -3,3 +3,9 @@ body{
     background-repeat: no-repeat;
     background-size: 120rem 62.5rem;
 }
+
+@media (max-width:1800px){
+    body{
+        background-size:  96rem 50rem;
+    }
+}
