--- a/Artzy - Web/header&footer/style2.css
+++ b/Artzy - Web/header&footer/style2.css
@@ -1,228 +1,516 @@
 *{
-    list-style-type:none;
+  list-style-type:none;
 
 }
 
 @font-face {
-    font-family: HeyComic ;
-    src: url(../src/font/hey_comic/Hey\ Comic.ttf);
+  font-family: HeyComic ;
+  src: url(../src/font/hey_comic/Hey\ Comic.ttf);
 }
 @font-face {
-    font-family: MomcakePro ;
-    src: url(../src//font/momcakepro/MomcakePro-Regular.ttf);
+  font-family: MomcakePro ;
+  src: url(../src//font/momcakepro/MomcakePro-Regular.ttf);
 }
 @font-face {
-    font-family: KGRedHands ;
-    src: url(../src//font/kg_red_hands/KGRedHands.ttf);
+  font-family: KGRedHands ;
+  src: url(../src//font/kg_red_hands/KGRedHands.ttf);
 }
 
 .menu{
-    height: 79px;
-    width: 100%;
-    border-radius: 15px;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-    background-color: #543838;
-    position: relative;
+  height: 79px;
+  width: 100%;
+  border-radius: 0rem 0rem 1rem 1rem;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  background-color: #543838;
+  position: relative;
+}
+#men{
+  margin-right: 1.5rem;
 }
 .logo {
-    width: 53.1px;
-    height: 53.1px;
-    margin: 12px 53.9px 0.9px 0;
-    transform: rotate(-354.94deg);
-  }
-  .menu-logo{
-    list-style-type:none;
-  }
-  .menu-nav{
-    align-items: center;
-    background: 0 0;
-    border: 0;
-    color: #96969a;
-    cursor: pointer;
-    display: flex;
-    flex-direction: row;
-    font-weight: 400;
-    height: 100%;
-    justify-content: flex-start;
-    outline: 0;
-    padding: 12px 0;
-    text-decoration: none;
-    transition: color .2s linear, background-color .2s linear;
-  }
-  .menu_{
-    display: flex;
-  }
+  width: 53.1px;
+  height: 53.1px;
+  margin: 8.7px 40.2px 0px 2rem;
+}
+.menu-logo{
+  list-style-type:none;
+}
+.menu-nav{
+  align-items: center;
+  background: 0 0;
+  border: 0;
+  color: #96969a;
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  font-weight: 400;
+  height: 100%;
+  justify-content: flex-start;
+  outline: 0;
+  padding: 12px 0;
+  text-decoration: none;
+}
 
-  .Explorar {
-    width: 94px;
-    height: 27px;
-    margin: 15px 25px 14px 25px;
-    font-family: HeyComic;
-    font-size: 21px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: 0.84px;
-    text-align: left;
-    color: #fcfcfc;
-  }
-  .Loja {
-    width: 50px;
-    height: 27px;
-    margin: 15px 45px 14px 20px;
-    font-family: HeyComic;
-    font-size: 21px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: 0.84px;
-    text-align: left;
-    color: #fcfcfc;
-  }
-  .Servios {
-    width: 95px;
-    height: 27px;
-    margin: 15px 35px 14px 0px;
-    font-family: HeyComic;
-    font-size: 21px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: 0.84px;
-    text-align: left;
-    color: #fcfcfc;
-  }
-  .search-icon{
-    color: white;
-    font-size: 15pt;
-    padding: 5px 0px 0px 0px;
-  }
+.menu_{
+  display: flex;
+  flex-shrink: 0;
+}
+.menu_ li {
+  flex-grow: 1;
+  width: 160px;
+}
+
+.Explorar {
+  margin-top: 1rem;
+  font-family: HeyComic;
+  font-size: 18px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 0.84px;
+  text-align: center;
+  color: #fcfcfc;
+}
+
+.Servios {
+  font-family: HeyComic;
+  font-size: 18px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 0.84px;
+  text-align: center;
+  color: #fcfcfc;
+}
+.search-icon{
+  color: white;
+  font-size: 15pt;
+  padding: 0.45rem 0px 0px 0px;
+}
 .menu-search{
-    height: 2rem;
-    width: 8rem;
-    flex-grow: 0;
-    margin: 15px 22px;
-    padding: 5px 634.8px 4px 34px;
-    border-radius: 50px;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25), 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-    border: solid 3px #fff;
-    background-color: rgba(217, 217, 217, 0);
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    outline: 0;
-    transition: color .2s linear, background-color .2s linear;
-    position: relative;
+  height: 3rem;
+  width: 1rem;
+  flex-grow: 1;
+  margin: 15px 22px;
+  padding: 5px 634.8px 4px 34px;
+  padding-right: 60rem;
+  border-radius: 50px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25), 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  border: solid 3px #fff;
+  background-color: rgba(217, 217, 217, 0);
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  outline: 0;
+  position: relative;
 }
 .search-bar{
-    font-family: MomcakePro;
-    background: #ffffff00;
-    border: none;
-    font-size: 19px;
-    font-weight: 500;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: 0.76px;
-    text-align: left;
-    color: #ffffff;
-    width: 83%;
-    margin-left: 30px;
-    height: 76%;
-    position: absolute;
-    outline: none;
+  font-family: MomcakePro;
+  background: #ffffff00;
+  border: none;
+  font-size: 19px;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 0.76px;
+  text-align: left;
+  color: #ffffff;
+  width: 83%;
+  margin-left: 30px;
+  height: 76%;
+  position: absolute;
+  outline: none;
 }
 ::placeholder {
-    color: rgb(255, 255, 255);
-  }
+  color: rgb(255, 255, 255);
+}
 .icons{
-    color: white;
+  color: white;
+}
+.env{
+  align-items: center;
+  color: #ffffff;
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  padding: 12px 0;
+  margin-top: 0.8rem;
+  margin-left: 3.4rem;
+  text-decoration: none;
+  font-size: 20.9pt;
+}
+.notf{
+  align-items: center;
+  color: #ffffff;
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  padding: 12px 0;
+  margin-top: 0.8rem;
+  margin-left: 2.3rem; 
+  text-decoration: none;
+  font-size: 20.9pt;
+  position: absolute;
+}
+
+.off{
+  display: none;
+}
+.msg {
+  position: absolute;
+  color: #ffffff;
+  cursor: pointer;
+  padding: 12px 0;
+  margin-top: 0.5rem;
+  margin-left: 1.6rem;
+  text-decoration: none;
+  font-size: 20.9pt;
 }
 .shop{
-    align-items: center;
-    color: #ffffff;
-    cursor: pointer;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    padding: 12px 0;
-    margin: 10px 0.2rem 0 1rem;
-    text-decoration: none;
-    font-size: 25pt;
+  position: absolute;
+  color: #ffffff;
+  cursor: pointer;
+  padding: 12px 0;
+  margin-top: 0.5rem;
+  margin-left: 1.1rem;
+  text-decoration: none;
+  font-size: 20.9pt;
 }
-.login{
-    width: 85px;
-    height: 30px;
-    flex-grow: 0;
-    margin: 1rem 1rem 9px 3rem;
-    padding: 8px 9.3px 8px 6px;
-    border-radius: 9px;
-    /* box-shadow: -4px 4px 0 0 #311b1b; */
-    background-color: #ffc369;
-    position: relative;
-    cursor: pointer;
+
+.pfp{
+
+  height: 40px;
+  width: 40px;
+  background-color: white;
+  border-radius: 100%;
+  margin: 17.6px 0px 0px 0.3rem;
+  
+
 }
-.icon-login{
-    position: absolute;
-    color: #543838;
-    font-size: 15pt;
-    padding: 0.3rem 0rem 0rem 0.3rem;
+
+
+#loj{
+  margin-left: 0rem;
+  margin-right: 0rem;
 }
-.login-btn{
-    position: absolute;
-    flex-grow: 0;
-    margin: 7px 0px 8px 32px;
-    font-family: KGRedHands;
-    font-size: 13px;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: 0.4px;
-    text-align: left;
-    color: #543838;
+#borger{
+  width: 69px;
 }
-.cad{
-    width: 115px;
-    height: 30px;
-    flex-grow: 0;
-    margin: 1rem 38.7px 9px 19px;
-    padding: 8px 9.3px 8px 6px;
-    border-radius: 9px;
-    background-color: #ffc369;
-    position: relative;
-    cursor: pointer;
-}
-.icon-cad{
-    position: absolute;
-    color: #543838;
-    font-size: 15pt;
-    padding: 0.3rem 0rem 0rem 0.2rem;
-}
-.cad-btn{
-    position: absolute;
-    flex-grow: 0;
-    margin: 7px 0px 7.4px 30px;
-    font-family: KGRedHands;
-    font-size: 13px;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: 0.4px;
-    text-align: left;
-    color: #543838;
-}
+
+
 .m-icon{
-    align-items: center;
-    color: #ffffff;
-    cursor: pointer;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    padding: 12px 0;
-    margin: 10px 6px 0 34px;
-    text-decoration: none;
-    font-size: 25pt;
+  align-items: center;
+  color: #ffffff;
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin: 0.6rem 0;
+  margin-top: 0.8rem;
+  text-decoration: none;
+  font-size: 25pt;
+}
+
+.dp{
+  top: 4.9rem;
+  left: 87.5rem;
+  margin-left: 20rem;
+  width: 11rem;
+  height: 24.2rem;
+  border-radius: 0rem 0rem 1rem 1rem;
+  background-color: #442d2df3;
+  position:absolute;
+  display:none;
+  cursor: cell;
+}
+
+#exps .dp-item {
+  display: flex;
+  align-items: center; /* Alinha verticalmente os itens */
+}
+
+#exps .item-content {
+  display: flex;
+  align-items: center;
+}
+
+#exps .item-content i {
+  margin-right: 10px; /* Adiciona um espaço entre o ícone e o texto */
+}
+#exps i {
+  margin: 3px;
+  font-size: 23px; /* Altere este valor para ajustar o tamanho da fonte */
+  color: #ffc369;
+}
+
+#exps span {
+  font-family: MomcakePro;
+  font-size: 22px; /* Altere este valor para ajustar o tamanho da fonte */
+  line-height: 1rem;
+  letter-spacing: 0.76px;
+  text-align: left;
+  color: #ffc369;
+}
+#exps  a{
+  text-decoration: none;
+}
+#exps .dp-menu{
+  margin-top: 1.09rem;
+  padding: 0rem 0rem 0rem 1rem;
+}
+.hr{
+  margin: 22px 0px 22px 6px;
+  width: 132px; 
+  border: solid 1px #726262  ;
+  border-radius:1px;
+}
+#men:active + .dp {
+  display: inline-block;
+}
+#exps {
+  cursor: default; 
+}
+.dp-menu a {
+  cursor: pointer; 
+}
+#menu-b{
+  background-color: #ffffff00;
+  border: none;
+  outline: none;
+  margin-top: 0.5rem;
+}
+
+#exps li:hover i,
+#exps li:hover span {
+  color: white;
+  cursor: pointer;
+}
+
+#env i:hover{
+  color: #ffc369;
+}
+#notf i:hover{
+  color: #ffc369;
+}
+#msg i:hover{
+  color: #ffc369;
+}
+#loj i:hover{
+  color: #ffc369;
+}
+
+
+.dp3{
+  top: 4.9rem;
+  margin-left: 1.5rem;
+  left: 11.3rem;
+  width: 11rem;
+  height: 9rem;
+  border-radius: 0rem 0rem 1rem 1rem;
+  background-color: #442d2d;
+  position:absolute;
+  display:none;
+  cursor: cell;
+}
+
+#jbs .dp-item {
+  display: flex;
+  align-items: center; /* Alinha verticalmente os itens */
+}
+
+#jbs .item-content {
+  display: flex;
+  align-items: center;
+  margin-left: -1rem;
+  width: 135px;
+}
+
+#jbs .item-content i {
+  margin-right: 10px; /* Adiciona um espaço entre o ícone e o texto */
+}
+
+#jbs i {
+  margin: 10px;
+  font-size: 23px; 
+  color: #ffc369;
+}
+
+
+#jbs span {
+  font-family: MomcakePro;
+  font-size: 22px; 
+  line-height: 1rem;
+  letter-spacing: 0.76px;
+  text-align: left;
+  color: #ffc369;
+}
+#jbs  a{
+  text-decoration: none;
+}
+#jbs .dp-menu{
+  margin-top: -0.01em;
+ padding-left: -0.2rem;
+}
+#jb button:hover + .dp3 {
+  display: inline-block;
+}
+#jbs {
+  cursor: default; 
+}
+.dp-menu a {
+  cursor: pointer; 
+}
+
+#jbs li:hover i,
+#jbs li:hover span {
+  color: white;
+  cursor: pointer;
+}
+
+#exp button{
+  height: 50px; width:5.5rem; margin-right:2.5rem;
+}
+
+#jb button{
+  height: 50px; width:5.5rem; margin-right:30px;
+}
+
+@media (max-width: 1800px) {
+
+
+  .dp{
+      left: 83.5rem;
+      margin-left: 0;
+  }
+  .menu_ li {
+      flex-grow: 1;
+      width: 68px;
+  }
+
+  .menu-nav{
+      justify-content: center;
+  }
+
+  .menu-search{
+      padding-right: 49.5rem;
+      margin: 14px 0px;
+      margin-left: 8px;
+      margin-right: 0px;
+  }
+  .shop{
+      justify-content: center;
+      margin-top: 0.7rem;
+      margin-left: -1.5rem;
+      font-size: 17.5pt;
+  }
+
+  .logo {
+      width: 43.1px;
+      height: 43.1px;
+      margin: 14.1px 39.2px 0px 1.6rem;
+  }
+
+  .Explorar{
+      font-size: 16.4px;
+  }
+  .Servios{
+      font-size: 16.4px;
+  }
+
+  #jb .menu-nav{
+      width: 70px;
+  }
+
+  .m-icon{
+      font-size: 19.5pt;
+      margin: 1rem 25.1px;
+
+  }
+
+  #borger{
+      width: 43px;
+  }
+
+  #loj {
+      width: 5px;
+      margin-left: 0rem;
+      margin-right: 0rem;
+  }
+
+  #logo{
+      width: 17px;
+  }
+
+  #exp{
+    width: 63px;
+    margin-left: 5.5rem;
+    margin-right: 3.5rem;
+  }
+
+  #exp button {
+      margin-right: 0.5rem;
+  }
+
+  #jb{
+      width: 0px;
+      margin-right: 4rem;
+  }
+
+  #jb button {
+      height: 50px;
+      margin-right: 0px;
+  }
+
+  .dp3{
+      left: 8.5rem;
+  }
+
+  #jbs .dp-item {
+      margin-left: 24px;
+      justify-content: flex-start;
+      flex-direction: column;
+  }
+
+  #jbs span {
+      font-family: MomcakePro;
+      font-size: 18px;
+  }
+
+  .hr{
+      border: solid 2px #726262  ;
+
+  }
+
+  .env{
+    margin-top: 0.9rem;
+    margin-left: 2.9rem;
+    font-size: 17.9pt;
+  }
+  .notf{
+    margin-top: 0.9rem;
+    margin-left: 1.4rem;
+    font-size: 17.9pt;
+  }
+  .msg{
+    margin-top: 0.6rem;
+    margin-left: 0rem;
+    font-size: 17.9pt;
+  }
+
+  .pfp {
+    height: 32px;
+    width: 32px;
+    margin: 20.6px 0px 0px 0.8rem;
+  }
+
+  #menu-b{
+    margin-left: -2.2rem;
+  }
+
+
 }
