--- a/Artzy - Web/css/style-profile.css
+++ b/Artzy - Web/css/style-profile.css
@@ -29,18 +29,44 @@ body{
 }
 
 .perf-fundo{
+    position: relative;
     width: 380px;
-    height: 1080px;
-    margin: 57px 41px 231px 39px;
-    padding: 63px 35px 142px 39px;
+    height: 567px;
+    margin: 34px 0px 0px 40px;
+    padding: 30px 0px 0px 31px;
     border-radius: 21px;
     box-shadow: 12px 15px 0 0 #e8a542;
     background-color: #3d2828;
+    overflow: hidden;
+}
+
+.scrollbar {
+    overflow-y: scroll;
+}
+
+.scrollbar::-webkit-scrollbar {
+    width: 19px;
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+    background-color: #e8a542; 
+    border: 0.48em solid #3d2828; 
+    border-radius: 2rem; 
+}
+
+.scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: #e8a642b7; 
+}
+
+.scrollbar::-webkit-scrollbar-track{
+    border-radius: 3rem;
+    margin-top: 1.9rem;
+    margin-bottom: 1.6rem;
 }
 
 .profile-p{
-    position: absolute ;
-    left: 6.5rem;
+    position: relative ;
+    left: 1.9rem;
     width: 198px;
     height: 198px;
     margin: 0 14px 19px 16px;
@@ -178,24 +204,12 @@ body{
     left: 0.9rem;
 }
 
-/* .seguir{
-    width: 130px;
-    height: 40px;
-    flex-grow: 0;
-    margin: 35px 12px 36px 3px;
-    padding:5.6px 34px 9px 28px;
-    border-radius: 6px;
-    background-color: #e8a542;
-    outline: none;
-    transition: box-shadow 0.4s ease, transform 0.4s ease, background-color 0.4s ease, border-color 0.4s ease;
-    border: solid 3px #00000000;
-} */
 .seguir{
     width: 130px;
     height: 40px;
     flex-grow: 0;
     margin: 35px 12px 36px 3px;
-    padding:5.6px 34px 9px 28px;
+    padding: 5.6px 12px 9px 12px;
     border-radius: 6px;
     background-color: #e8a542;
     outline: none;
@@ -231,7 +245,6 @@ body{
     color: #fff;
     bottom: 0.27rem;
     left: 0.1rem;
-    /* background-color: aqua; */
 }
 
 .seg-lbl{
@@ -246,6 +259,10 @@ body{
     bottom: 0.12rem;
     left: 0.1rem;
     /* background-color: aqua; */
+}
+
+#f2{
+    display: none;
 }
 
 .bio{
@@ -319,9 +336,9 @@ body{
 }
 
 .banner{
-    position: relative;
-    bottom: 82rem;
-    left: 25.7rem;
+    position: absolute;
+    bottom: 16.5rem;
+    left: 26.7rem;
     width: 1110px;
     height: 307px;
     margin: 57px 29px 52px 41px;
@@ -332,3 +349,21 @@ body{
     width: 1110px;
     height: 307px;
 }
+
+.Portiflio {
+    position: absolute;
+    bottom: 13rem;
+    left: 30rem;
+    width: 138px;
+    height: 47px;
+    text-shadow: -2px 4px 0 #543838;
+    font-family: MomcakePro;
+    font-size: 43px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: left;
+    color: #e8a542;
+  }
